refactor: 修复 IDE 诊断警告并清理冗余代码与废弃 API